[gd_scene load_steps=6 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Ally2.gd" type="Script" id=2]
[ext_resource path="res://PackgeScene/LifeSystem.tscn" type="PackedScene" id=3]

[sub_resource type="CircleShape2D" id=8]
radius = 3.16228

[sub_resource type="CircleShape2D" id=9]
radius = 74.3303

[node name="Ally" type="RigidBody2D" groups=["Ally"]]
mode = 2
gravity_scale = 0.0
script = ExtResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
modulate = Color( 0, 1, 0.0627451, 1 )
scale = Vector2( 0.2, 0.2 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 8 )

[node name="Rays" type="Node2D" parent="."]

[node name="RayCast2D" type="RayCast2D" parent="Rays"]
position = Vector2( 0, 7 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 40 )

[node name="RayCast2D2" type="RayCast2D" parent="Rays"]
position = Vector2( 0, -7 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, -40 )

[node name="RayCast2D3" type="RayCast2D" parent="Rays"]
position = Vector2( 7, 0 )
enabled = true
exclude_parent = false
cast_to = Vector2( 40, 0 )

[node name="RayCast2D4" type="RayCast2D" parent="Rays"]
position = Vector2( -7, 0 )
enabled = true
exclude_parent = false
cast_to = Vector2( -40, 0 )

[node name="View" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="View"]
shape = SubResource( 9 )

[node name="Arm" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( -2.125, 2 )
scale = Vector2( 0.0664063, 0.0625 )
texture = ExtResource( 1 )

[node name="Weapon" type="Sprite" parent="Arm"]
position = Vector2( 107.294, 0 )
scale = Vector2( 3.58824, 0.5 )
texture = ExtResource( 1 )

[node name="Spaw" type="Position2D" parent="Arm"]
position = Vector2( 212, 0 )
rotation = 1.5708

[node name="LifeSystem" parent="." instance=ExtResource( 3 )]
position = Vector2( 0, 8 )

[connection signal="body_entered" from="View" to="." method="_on_View_body_entered"]
[connection signal="dead" from="LifeSystem" to="." method="_on_LifeSystem_dead"]
